{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 0,
  "lineage": "498a7d8a-aa2f-2806-54aa-df56ce0930f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_ngw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-03b3459c1dce89ed2",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-34-59-43.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.59.43",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_ngw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09284864d3a0d34fd",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-15-165-65-64.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.165.65.64",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626426825780:internet-gateway/igw-0e7c8a915fbeb69ae",
            "id": "igw-0e7c8a915fbeb69ae",
            "owner_id": "626426825780",
            "vpc_id": "vpc-01c365fd65d302cb3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "Front-End",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:626426825780:loadbalancer/app/Front-End-LB/667d7c1fb0ff0b0d",
            "arn_suffix": "app/Front-End-LB/667d7c1fb0ff0b0d",
            "dns_name": "Front-End-LB-1451999877.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:626426825780:loadbalancer/app/Front-End-LB/667d7c1fb0ff0b0d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Front-End-LB",
            "security_groups": [
              "sg-0c4d2147d953b546d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0867bd5baf636834e"
              },
              {
                "subnet_id": "subnet-0edfd5c6c1c4a49cd"
              }
            ],
            "subnets": [
              "subnet-0867bd5baf636834e",
              "subnet-0edfd5c6c1c4a49cd"
            ],
            "vpc_id": "vpc-01c365fd65d302cb3",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.HTTP",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "Front-End",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:626426825780:listener/app/Front-End-LB/667d7c1fb0ff0b0d/165be570045bbef3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:626426825780:targetgroup/Front-End-LB-TargetGroup/1adc5d7a62a09e10",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:626426825780:listener/app/Front-End-LB/667d7c1fb0ff0b0d/165be570045bbef3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:626426825780:loadbalancer/app/Front-End-LB/667d7c1fb0ff0b0d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.Front-End",
            "aws_lb_target_group.Front-End",
            "aws_security_group.HTTP",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "Front-End",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:626426825780:targetgroup/Front-End-LB-TargetGroup/1adc5d7a62a09e10",
            "arn_suffix": "targetgroup/Front-End-LB-TargetGroup/1adc5d7a62a09e10",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:626426825780:targetgroup/Front-End-LB-TargetGroup/1adc5d7a62a09e10",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "Front-End-LB-TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01c365fd65d302cb3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b3459c1dce89ed2",
            "connectivity_type": "public",
            "id": "nat-0f6f2ef1d28bd8cad",
            "network_interface_id": "eni-038dc4e55f8d1028e",
            "private_ip": "10.0.1.201",
            "public_ip": "3.34.59.43",
            "subnet_id": "subnet-0867bd5baf636834e"
          },
          "dependencies": [
            "aws_eip.eip_ngw_1",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09284864d3a0d34fd",
            "connectivity_type": "public",
            "id": "nat-0881303ca7fdf3c46",
            "network_interface_id": "eni-076b6d2f7ab115c76",
            "private_ip": "10.0.0.119",
            "public_ip": "15.165.65.64",
            "subnet_id": "subnet-0edfd5c6c1c4a49cd"
          },
          "dependencies": [
            "aws_eip.eip_ngw_2",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626426825780:route-table/rtb-0247e7fe8eb481ee0",
            "id": "rtb-0247e7fe8eb481ee0",
            "owner_id": "626426825780",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f6f2ef1d28bd8cad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-01c365fd65d302cb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_ngw_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private_nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626426825780:route-table/rtb-0468829d26438a83d",
            "id": "rtb-0468829d26438a83d",
            "owner_id": "626426825780",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0881303ca7fdf3c46",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-01c365fd65d302cb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_ngw_2",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw_2",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626426825780:route-table/rtb-0e77f03e600f35527",
            "id": "rtb-0e77f03e600f35527",
            "owner_id": "626426825780",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7c8a915fbeb69ae",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-01c365fd65d302cb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate_private_3_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fd64596e55b3e09",
            "route_table_id": "rtb-0247e7fe8eb481ee0",
            "subnet_id": "subnet-0cdb154a9d2edddbf"
          },
          "dependencies": [
            "aws_eip.eip_ngw_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw_1",
            "aws_route_table.route_table_private_nat_1",
            "aws_subnet.private_subnet_3",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate_private_3_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06fd64596e55b3e09",
            "route_table_id": "rtb-0247e7fe8eb481ee0",
            "subnet_id": "subnet-0cdb154a9d2edddbf"
          },
          "dependencies": [
            "aws_eip.eip_ngw_1",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw_1",
            "aws_route_table.route_table_private_nat_1",
            "aws_subnet.private_subnet_3",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01dbe355da7ba966c",
            "route_table_id": "rtb-0e77f03e600f35527",
            "subnet_id": "subnet-0edfd5c6c1c4a49cd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table_public_igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_associate_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04725d42f043c0436",
            "route_table_id": "rtb-0e77f03e600f35527",
            "subnet_id": "subnet-0867bd5baf636834e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table_public_igw",
            "aws_subnet.public_subnet_2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626426825780:security-group/sg-0c4d2147d953b546d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c4d2147d953b546d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "access HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "access HTTP",
            "name_prefix": "",
            "owner_id": "626426825780",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01c365fd65d302cb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626426825780:subnet/subnet-0cdb154a9d2edddbf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0cdb154a9d2edddbf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626426825780",
            "vpc_id": "vpc-01c365fd65d302cb3"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626426825780:subnet/subnet-0c7990d5affb1d919",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c7990d5affb1d919",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626426825780",
            "vpc_id": "vpc-01c365fd65d302cb3"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626426825780:subnet/subnet-0edfd5c6c1c4a49cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0edfd5c6c1c4a49cd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626426825780",
            "vpc_id": "vpc-01c365fd65d302cb3"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626426825780:subnet/subnet-0867bd5baf636834e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0867bd5baf636834e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "626426825780",
            "vpc_id": "vpc-01c365fd65d302cb3"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:626426825780:vpc/vpc-01c365fd65d302cb3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e262a8519f486ae9",
            "default_route_table_id": "rtb-0ad670fd5dae75f26",
            "default_security_group_id": "sg-0b3bc3de797b75279",
            "dhcp_options_id": "dopt-e952cf82",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01c365fd65d302cb3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ad670fd5dae75f26",
            "owner_id": "626426825780"
          }
        }
      ]
    }
  ]
}